--- a/tests.ipynb
+++ b/tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -28,13 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45d3e70adb77435b88665e21ee39e7df",
+       "model_id": "e4121b37e76747308ffc9e50cb4cece3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,61 @@
     "    def __init__(self, vertices_list=[]):\n",
     "        self.vertices = np.array(vertices_list)\n",
     "        self.edges = np.zeros(shape=(self.vertices.size, self.vertices.size))\n",
+    "    \n",
+    "        # variables to help to fill the edges matix\n",
+    "    \n",
+    "        sudoku_row_adj_bounds = [[0, 9], [9, 18], [18, 27], [27, 36], [36, 45], [45, 54], [54, 63], [63, 72], [72, 81]]\n",
+    "        sudoku_blocks = [\n",
+    "            [[0, 1, 2], [9, 10, 11], [18, 19, 20]],\n",
+    "            [[3, 4, 5], [12, 13, 14], [21, 22, 23]],\n",
+    "            [[6, 7, 8], [15, 16, 17], [24, 25, 26]],\n",
+    "            [[27, 28, 29], [36, 37, 38], [45, 46, 47]],\n",
+    "            [[30, 31, 32], [39, 40, 41], [48, 49, 50]],\n",
+    "            [[33, 34, 35], [42, 43, 44], [51, 52, 53]],\n",
+    "            [[54, 55, 56], [63, 64, 65], [72, 73, 74]],\n",
+    "            [[57, 58, 59], [66, 67, 68], [75, 76, 77]],\n",
+    "            [[60, 61, 62], [69, 70, 71], [78, 79, 80]],\n",
+    "        ]\n",
+    "        \n",
     "        # now fill the edges matrix\n",
+    "        for i in range(0, self.edges.size):\n",
+    "            if i == 81:\n",
+    "                break\n",
+    "            # now we need to color the row adjacents of the vertice \"i\"\n",
+    "            # first we discover the vertices\n",
+    "            for row in sudoku_row_adj_bounds:\n",
+    "                if i >= row[0] and i < row[1]:\n",
+    "                    #  vertice \"i\" is in this line, so all the vertices\n",
+    "                    # with index between row[0] and row[1] are adjacents\n",
+    "                    # of \"i\"\n",
+    "                    for j in range(row[0], row[1]):\n",
+    "                        if i != j:\n",
+    "                            self.edges[i, j] = 1\n",
+    "            \n",
+    "            # now we need to color the columns adjacents of the vertice \"i\"\n",
+    "            for j in range(i, 81, 9):\n",
+    "                if i != j:\n",
+    "                    self.edges[i, j] = 1\n",
+    "            for j in range(i, 0, -9):\n",
+    "                if i != j:\n",
+    "                    self.edges[i, j] = 1\n",
+    "                    \n",
+    "            # now we need to color the sudoku blocks of adjacents of the vertice \"i\"\n",
+    "            is_this_block = False\n",
+    "            for block in sudoku_blocks:\n",
+    "                for block_row in block:\n",
+    "                    for index in block_row:\n",
+    "                        if index == i:\n",
+    "                            is_this_block = True\n",
+    "                            break\n",
+    "                    break\n",
+    "                if is_this_block:\n",
+    "                    for block_row in block:\n",
+    "                        for block_row in block:\n",
+    "                            for j in block_row:\n",
+    "                                self.edges[i, j] = 1\n",
+    "                    break\n",
+    "                    \n",
     "\n",
     "    def get_adjacents(self, vertice_index):\n",
     "        \"\"\"\n",
@@ -89,9 +143,9 @@
     "          Receive the index of a vertice and return a np.array with the\n",
     "        colors of the adjacents.\n",
     "        \"\"\"\n",
-    "        adjacets = get_adjacents(vertice_index)\n",
+    "        adjacets = self.get_adjacents(vertice_index)\n",
     "        adjacents_colors = []\n",
-    "        for vertice in adjacets:\n",
+    "        for vertice in adjacents_colors:\n",
     "            if self.vertices[vertice] not in adjacents_colors:\n",
     "                adjacents_colors.append(self.vertices[vertice])\n",
     "        return np.array(adjacents_colors)\n",
@@ -110,7 +164,7 @@
     "        colors = {}\n",
     "        max_color_number = 9\n",
     "        for vertice in range(0, vertices_number): # loop over all the vertices\n",
-    "            vertice = self.vertices[i] # the actual vertice\n",
+    "            #vertice_ = self.vertices[i] # the actual vertice\n",
     "            ajd_colors_array = self.adjacents_colors(vertice) # the colors of the adjacents\n",
     "            expected_color = 1 # the counter of to the expected colors\n",
     "            for adj_color in ajd_colors_array: # loop over the adjacents colors\n",
@@ -199,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +731,7 @@
        "[499 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,14 +742,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 499/499 [00:00<00:00, 20004.18it/s]\n"
+      "100%|██████████| 499/499 [00:00<00:00, 20824.62it/s]\n"
      ]
     }
    ],
@@ -707,14 +761,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "499it [00:00, 18522.73it/s]\n"
+      "499it [00:00, 21742.98it/s]\n"
      ]
     }
    ],
@@ -725,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +804,7 @@
        "      dtype='<U1')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,22 +815,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "array([[ 0.,  1.,  1., ...,  0.,  0.,  0.],\n",
+       "       [ 1.,  0.,  1., ...,  0.,  0.,  0.],\n",
+       "       [ 1.,  1.,  0., ...,  0.,  0.,  0.],\n",
        "       ..., \n",
-       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.]])"
+       "       [ 0.,  0.,  0., ...,  0.,  1.,  1.],\n",
+       "       [ 0.,  0.,  0., ...,  1.,  0.,  1.],\n",
+       "       [ 0.,  0.,  0., ...,  1.,  1.,  0.]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -796,13 +850,33 @@
        "array([], dtype=float64)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "graph.get_adjacents(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph.greed()"
    ]
   },
   {
@@ -818,18 +892,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.3"
   }
  },
  "nbformat": 4,
