graph não coloca vertice como um adjacente dele mesmo

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,8 @@
     "                    for block_row in block:\n",
     "                        for block_row in block:\n",
     "                            for j in block_row:\n",
-    "                                self.edges[i, j] = 1\n",
+    "                                if i != j:\n",
+    "                                    self.edges[i, j] = 1\n",
     "                    break\n",
     "                    \n",
     "\n",
@@ -253,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +732,7 @@
        "[499 rows x 2 columns]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,14 +743,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 499/499 [00:00<00:00, 20824.62it/s]\n"
+      "100%|██████████| 499/499 [00:00<00:00, 20012.60it/s]\n"
      ]
     }
    ],
@@ -761,14 +762,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "499it [00:00, 21742.98it/s]\n"
+      "499it [00:00, 21728.08it/s]\n"
      ]
     }
    ],
@@ -779,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +805,7 @@
        "      dtype='<U1')"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,42 +816,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.,  1.,  1., ...,  0.,  0.,  0.],\n",
-       "       [ 1.,  0.,  1., ...,  0.,  0.,  0.],\n",
-       "       [ 1.,  1.,  0., ...,  0.,  0.,  0.],\n",
-       "       ..., \n",
-       "       [ 0.,  0.,  0., ...,  0.,  1.,  1.],\n",
-       "       [ 0.,  0.,  0., ...,  1.,  0.,  1.],\n",
-       "       [ 0.,  0.,  0., ...,  1.,  1.,  0.]])"
+       "array([ 0.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  1.,  1.,  1.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.])"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "graph.edges"
+    "graph.edges[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([], dtype=float64)"
+       "array([0])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +871,7 @@
        "{}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,6 +893,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
